@@ -52,7 +52,7 @@
 
 #include "kjs_css.lut.h"
 
-#if SVG_SUPPORT
+#ifdef SVG_SUPPORT
 #include "JSSVGColor.h"
 #include "JSSVGPaint.h"
 #endif
@@ -950,7 +950,7 @@ JSValue* toJS(ExecState* exec, CSSValue *v)
   else {
     if (v->isValueList())
       ret = new JSCSSValueList(exec, static_cast<CSSValueList*>(v));
-#if SVG_SUPPORT
+#ifdef SVG_SUPPORT
     else if (v->isSVGColor())
       ret = new JSSVGColor(exec, static_cast<SVGColor*>(v));
     else if (v->isSVGPaint())
